--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -11,3 +11,15 @@
 mjx-container>svg {
 	display: inline-block;
 }
+
+div.youtube {
+	max-width: 853px; margin: 0 auto; padding: 0;
+}
+
+div.youtube div {
+	position: relative; padding-bottom: 56.25%; height: 0;
+}
+
+div.youtube div iframe {
+	position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+}
