--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -23,3 +23,29 @@ div.youtube div {
 div.youtube div iframe {
 	position: absolute; top: 0; left: 0; width: 100%; height: 100%;
 }
+
+.vp-doc {
+	counter-reset: figures;
+}
+
+figure {
+	display: table;
+	margin:auto;
+}
+
+figure img {
+	margin:auto;
+	display: block;
+}
+
+figure figcaption {
+	counter-increment: figures;
+	text-align:center;
+	caption-side: bottom;
+	display: table-caption;
+}
+
+figure figcaption:before {
+	color: var(--vp-c-brand);
+	content: 'Fig. ' counter(figures) ' ';
+}
